force-app/main/default/objects/AP_Activity_Config__c/AP_Activity_Config__c.object-meta.xml
<CustomObject>
    <label>AP Activity Config</label>
    <nameField>
        <label>AP Activity Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AP Activity Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>