force-app/main/default/objects/AP_Activity_Config__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AP Activity Config</relationshipLabel>
    <relationshipName>AP_Activity_Config</relationshipName>
    <type>Lookup</type>
</CustomField>