force-app/main/default/objects/AP_Activity_Config__c/fields/Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Status__c</fullName>
    <label>Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>