force-app/main/default/objects/AP_Activity_Config__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>