force-app/main/default/objects/AP_Activity_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Parent_Object__c</columns>
    <columns>AP_Template__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Activity_Status__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>